client/styles/main.css
@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Montserrat&family=Roboto&display=swap');

h1 {
  font-family: 'montserrat', sans-serif;
  text-align: center;
  font-size: 5vw;
  color: #c6a582;

  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: nowrap;
}

body {
  background-color: #50312f;
  margin-bottom: 10rem;
}

/* HOME PAGE */

h2 {
  font-family: 'montserrat', sans-serif;
  text-align: center;
  font-size: 3vw;
  color: #8b9475;
}

h3 {
  font-family: 'montserrat', sans-serif;
  text-align: center;
  font-size: 2.5vw;
  color: #8b9475;
}

h4 {
  font-family: 'montserrat', sans-serif;
  text-align: center;
  font-size: 2.5vw;
  color: #c6a582;
}

.homepage {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

.homeImage {
  width: 200px;
  height: 200px;
  border: solid;
  border-radius: 50%;
  border-color: #9d6c44;

  display: flex;
  flex-direction: auto;
  align-items: center;

  margin-left: auto;
  margin-right: auto;
}

ul {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  padding-left: 0px;
}

li {
  font-family: 'montserrat', sans-serif;
  text-align: center;
  font-size: 20px;
  font-weight: bold;
  color: #2c2a2a;

  text-decoration: none;
  list-style-type: none;

  padding: 10px;
  margin: 20px;
}

a:link {
  color: #c6a582;
  text-decoration: none;
  align-self: center;
}

a:visited {
  color: #ba8e69;
  text-decoration: none;
  align-self: center;
}

.plantList {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
}

/* INDIVIDUAL PLANT PAGE */

.PlantPage {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  justify-content: center;
}

.nameImage {
  display: flex;
  flex-direction: column;
  padding-right: 15vw;
}

.plantInfo {
  display: flex;
  flex-direction: column;
  align-self: right;
  padding-top: 3rem;
}


p {
  font-family: 'montserrat', sans-serif;
  text-align: center;
  font-weight: bold;
  font-size: 2.1vw;
  color: #8b9475;
}

.individualImage {
  width: 30vw;
  height: 30vw;
  border: solid;
  border-radius: 50%;
  border-color: #9d6c44;
  margin-top: 4vw;

  margin-left: auto;
  margin-right: auto;
}

button {
  font-family: 'montserrat', sans-serif;
  font-weight: bolder;
  color: #433937;
  width: 5rem;
  height: 2rem;

  align-self: center;

  margin-top:5vw;

  cursor: pointer;
  background-color: #9d6c44;
  border-color: #8b5f3c;
  border-radius: 1rem;
  border-style: solid; 
}


/* ADD PAGE */

form {
  font-family: 'montserrat', sans-serif;
  text-align: center;
  align-items: center;
}

input {
  background-color: #8b5f3c;
  border-color: #8b5f3c;
  border-style: solid;
  color: #c6a582;
  outline: none;
}

/* FOOTER */
.copyright {
  font-family: 'montserrat', sans-serif;
  text-align: center;
  font-weight: 300;
  font-size: 0.75em;
  color: #dbccb5;
  margin-top: 20vw;
  margin-bottom: 0px;
}

/* LOADING ICON */

.loading-icon {
  width: 50px;
  height: 50px;
  animation: spin 4s infinite;
  display: flex;
  flex-direction: auto;
  align-items: center;
  margin-left: auto;
  margin-right: auto;
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }
  12.5% {
    transform: rotate(45deg);
  }
  25% {
    transform: rotate(90deg);
  }
  37.5% {
    transform: rotate(135deg);
  }
  50% {
    transform: rotate(180deg);
  }
  62.5% {
    transform: rotate(225deg);
  }
  75% {
    transform: rotate(270deg);
  }
  87.5% {
    transform: rotate(315deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

